# confz

./: .flake8  .gitattributes  .gitignore  Makefile  README.md  ansible_vault_filter.py  crydee.yml  hosts  hosts.confz.yml  hosts.gpg  hosts.vault  hosts.yml  milamber.yml  pis.yml  pug.yml  pyproject.toml  servers.yml  site.yml  vault-password.bash
roles/base/tasks/: main.yml
roles/confz/tasks/: main.yml
roles/curl/tasks/: main.yml
roles/emacs/tasks/: main.yml
roles/git/files/: config  gitconfig
roles/git/meta/: main.yml
roles/git/tasks/: main.yml
roles/github-key/files/: github  github.gpg  github.pub  github.pub.gpg
roles/github-key/tasks/: main.yml
roles/go/files/: go.zsh-env
roles/go/tasks/: main.yml
roles/jekyll/files/: ruby.zsh-env
roles/jekyll/tasks/: main.yml
roles/jupyter-deps/tasks/: main.yml
roles/jupyter-launch/tasks/: main.yml
roles/latex/files/: indentconfig.yml  latexmkrc
roles/latex/tasks/: main.yml
roles/ml-cluster/files/: ml-cluster.zsh-alias  ml-cluster.zsh-env
roles/ml-cluster/tasks/: main.yml
roles/nltk-data/files/: nltk.zsh-env
roles/nltk-data/tasks/: main.yml
roles/poetry/defaults/: main.yml
roles/poetry/meta/: main.yml
roles/poetry/tasks/: main.yml
roles/python/defaults/: main.yml
roles/python/files/: miniconda.zsh-env  pypirc  python.zsh-env  virtualenvwrapper.zsh-env
roles/python/tasks/: main.yml
roles/python/vars/: main.yml
roles/rust/tasks/: main.yml
roles/ssh/files/: config  config.gpg
roles/ssh/meta/: main.yml
roles/ssh/tasks/: main.yml
roles/tmux/files/: tmux.conf
roles/tmux/tasks/: main.yml
roles/update/tasks/: main.yml
(+120 files in other folders)
