[tool.poetry]
name = "confz"
version = "0.1.0"
description = ""
authors = ["m09 <142691+m09@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
