[project]
authors = [
  {name = "m09", email = "142691+m09@users.noreply.github.com"},
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "ansible >= 11, < 12",
]
description = ""
homepage = "https://github.com/m09/confz"
name = "confz"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.0"

[tool.poetry.dependencies]
ansible = "^5.9.0"
python = "^3.9"
